autenticacion por terceros

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Solo Motos</h1>
 
-    <form action="/api/products" method="post" enctype="multipart/form-data">
+    <!-- <form action="/api/products" method="post" enctype="multipart/form-data"> -->
+        <form >
         <label>Nombre</label>
         <input name="name">
 
